--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
 {% for student in students %}
   <div>
     <p>{{ student.name }} - ID: <b>{{ student.id }}</b></p>
+    <a href="http://localhost:5000/mypage">My page</a>
     </div>
 {% endfor %}
 {% endblock %}
