--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head><title>{{ title }} - Blog</title></head>
     <body>
-         {% if greeting %}
+         <!-- {% if greeting %}
             <h1>{{ greeting }} {{ user.username }}</h1>
         {% else %}
             <h1>Hello {{ user.username }}</h1>
         {% endif %}
-        {% block content %}{% endblock %}
+        {% block content %}{% endblock %} -->
     <div>
     My Page:
     <a href="/index">Home</a>
