--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,9 +3,10 @@
     <head><title>{{ title }} - Blog</title></head>
     <body>
     <div>
-    My Page:
+    Menu':
     <a href="/index">Home</a>
     <a href="/login">Login</a>
+        <a href="/mypage">My page</a>
     </div>
     <div>
          {% if greeting %}
