--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% for student in students %}
   <div>
-    <p>{{ student.name }} - ID: <b>{{ student.id }}</b></p>
+    <p>{{ student.name }}</p>
 
     </div>
 {% endfor %}
