--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 {% for student in students %}
-  <div>
+    <div>
+         {% if greeting %}
+            <h1>{{ greeting }} {{ user.username }}</h1>
+        {% else %}
+            <h1>Hello {{ user.username }}</h1>
+        {% endif %}
+
+    </div>
+<div>
     <p>{{ student.name }}</p>
 
     </div>
+
 {% endfor %}
 
 {% endblock %}
